--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_USER=admin
 DB_PASS=admin1234
-DB_HOST=localhost
+DB_HOST=db
 DB_NAME=golang_api
-DB_PORT=5433
+DB_PORT=5432
 
 JWT_SECRET=dawokdoawkd
