--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,19 @@
 version: '3.7'
 
 services:
-#   app:
-#     build: ./app
-#     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
-#     ports:
-#       - 8000:8000
-#     env_file:
-#       - ./app/src/.env.dev
-#     depends_on:
-#       - db
+  app:
+    image: hadyanadam/go-gin-gorm-learn
+    ports:
+      - 8000:8000
+    env_file:
+      - ./.env
+    depends_on:
+      - db
 
   db:
     image: postgres:12.0-alpine
-    ports:
-      - 5433:5432
+    expose:
+      - 5432
     volumes:
       - golang_api_vol:/var/lib/postgresql/data/
     environment:
